@@ -1,6 +1,12 @@
 # ChangeLog for dev-java/jsr223
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/jsr223/ChangeLog,v 1.2 2008/12/20 22:01:26 maekke Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-java/cvs-repo/gentoo-x86/dev-java/jsr223/ChangeLog,v 1.3 2010/05/02 13:49:08 betelgeuse Exp $
+
+*jsr223-1.0-r1 (02 May 2010)
+
+  02 May 2010; Petteri Räty <betelgeuse@gentoo.org> +jsr223-1.0-r1.ebuild:
+  Create a new revision from openjdk classes so that we don't need to fetch
+  restrict this any more. Fixes bug #272562.
 
   20 Dec 2008; Markus Meier <maekke@gentoo.org> jsr223-1.0.ebuild:
   amd64/x86 stable, bug #251172
